# ChangeLog for app-portage/flagedit
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/flagedit/Attic/ChangeLog,v 1.7 2005/12/09 10:28:24 dams Exp $

  09 Dec 2005; Damien Krotkine <dams@gentoo.org> flagedit-0.0.5.ebuild:
  marking stable on x86 and ppc

*flagedit-0.0.5 (19 Oct 2005)

  19 Oct 2005; Damien Krotkine <dams@gentoo.org> +flagedit-0.0.5.ebuild:
  version bump flagedit-0.0.5.ebuild

*flagedit-0.0.4 (19 Oct 2005)

  19 Oct 2005; Damien Krotkine <dams@gentoo.org> +flagedit-0.0.4.ebuild:
  version bump

*flagedit-0.0.3 (19 Oct 2005)

  19 Oct 2005; Damien Krotkine <dams@gentoo.org> +flagedit-0.0.3.ebuild:
  version bump

  18 Oct 2005; Marcus D. Hanwell <cryos@gentoo.org> flagedit-0.0.2.ebuild:
  Marked ~amd64, closes bug 109665.

  15 Oct 2005; <dams@gentoo.org> flagedit-0.0.2.ebuild:
  added ~ppc

*flagedit-0.0.2 (14 Oct 2005)

  14 Oct 2005; Damien Krotkine <dams@gentoo.org> +metadata.xml,
  +flagedit-0.0.2.ebuild:
  initial ebuild
