@@ -1,6 +1,11 @@
 # ChangeLog for app-portage/flagedit
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/flagedit/Attic/ChangeLog,v 1.7 2005/12/09 10:28:24 dams Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/flagedit/Attic/ChangeLog,v 1.8 2005/12/26 14:55:49 dams Exp $
+
+*flagedit-0.0.7 (26 Dec 2005)
+
+  26 Dec 2005; Damien Krotkine <dams@gentoo.org> +flagedit-0.0.7.ebuild:
+  version bump
 
   09 Dec 2005; Damien Krotkine <dams@gentoo.org> flagedit-0.0.5.ebuild:
   marking stable on x86 and ppc
